--- a/styles/temples.css
+++ b/styles/temples.css
@@ -24,6 +24,7 @@ header {
     background-color: #6B4226;
     color: white;
     position: relative;
+    width: 100%;
 }
 
 /* Logo */
@@ -86,13 +87,13 @@ header h1.hidden {
 }
 /* Main content */
 main {
-    max-width: 500px;
+    max-width: 1200px;
     margin: 2rem auto;
-    padding: 0 1rem;
-    display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    display: grid;
+    padding: 2px;
 }
+
 main h1 {
     grid-column: 1 / -1; /* ocupa todas las columnas */
     text-align: center;
@@ -102,14 +103,16 @@ main h1 {
 main figure {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-bottom: 0;
+    text-align: center;
 }
 
 main figure img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+    width: 10%;
+    max-width: 400px; /* ajusta a tu gusto */
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 main figure figcaption {
@@ -125,4 +128,31 @@ footer {
     background-color: #6B4226;
     color: white;
     font-size: 0.9rem;
+}
+#temple-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 columnas iguales */
+    gap: 1rem; /* espacio entre tarjetas */
+    max-width: 100%;
+    padding: 3rem;
+    text-align: center;
+    
+}
+.temple-card img {
+    width: 250px;
+    height: auto;
+    text-align: center;
+}
+.temple-card {
+    border: 1px solid #ccc;
+    padding: 1rem;
+    text-align: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+}
+
+/* Responsive: menos de 900px, una columna */
+@media (max-width: 900px) {
+    #temple-container {
+        grid-template-columns: 2fr; /* columna única */
+    }
 }
