--- a/styles/temples.css
+++ b/styles/temples.css
@@ -18,7 +18,7 @@ body {
 /* Contenedor header */
 header {
     display: flex;
-    justify-content: space-between; /* logo a la izquierda, botón a la derecha */
+    justify-content: space-between;
     align-items: center;
     padding: 1rem;
     background-color: #6B4226;
@@ -34,10 +34,10 @@ header .logo {
 
 /* Mobile menu */
 #nav-menu {
-    display: none; /* oculto por defecto */
+    display: none; 
     flex-direction: column;
     gap: 1rem;
-    background-color: #6B4226; /* café */
+    background-color: #6B4226; 
     padding: 1rem;
     width: 100%;
     box-sizing: border-box;
@@ -54,7 +54,7 @@ header h1.hidden {
 /* Mostrar menú cuando tiene clase .show */
 #nav-menu.show {
     display: flex;
-    align-items: center; /* <- centra los links horizontalmente */
+    align-items: center;
 }
 
 /* Mantener el botón a la derecha */
@@ -72,7 +72,7 @@ header h1.hidden {
 /* Links del menú */
 #nav-menu a {
     display: block;   
-    margin: 0 auto;   /* centra cada link horizontalmente */
+    margin: 0 auto;   
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -95,7 +95,7 @@ main {
 }
 
 main h1 {
-    grid-column: 1 / -1; /* ocupa todas las columnas */
+    grid-column: 1 / -1; 
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -109,7 +109,7 @@ main figure {
 
 main figure img {
     width: 10%;
-    max-width: 400px; /* ajusta a tu gusto */
+    max-width: 400px; 
     height: auto;
     display: block;
     margin: 0 auto;
@@ -131,8 +131,8 @@ footer {
 }
 #temple-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columnas iguales */
-    gap: 1rem; /* espacio entre tarjetas */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 1rem; 
     max-width: 100%;
     padding: 3rem;
     text-align: center;
@@ -150,7 +150,7 @@ footer {
     grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
 }
 
-/* Responsive: menos de 900px, una columna */
+
 @media (max-width: 900px) {
     #temple-container {
         grid-template-columns: 2fr; /* columna única */
