--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,15 @@ a:hover {
     display: block;
     margin-bottom: 0.5rem;
 }
-
+.logo-text {
+    font-family: 'Press Start 2P', cursive;
+    color: var(--neon-rosa);
+    font-size: 1.2rem;
+    margin: 0 0 2rem 0;
+    text-align: left;
+    padding-left: 1rem;
+    line-height: 1.5rem;
+}
 /* Navegación lateral */
 .nav-lateral {
     position: fixed;
@@ -71,6 +79,9 @@ a:hover {
 main {
     margin-left: 220px; /* espacio para la nav lateral */
     padding: 1rem;
+    display: grid;
+    
+    
 }
 
 /* Secciones */
@@ -79,6 +90,9 @@ section {
     padding: 1rem;
     border-left: 5px solid var(--verde-menta);
     background-color: #2c2c2c;
+    flex-direction: column;
+    flex: 1;
+    display:block;
 }
 
 /* Footer */
